--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </style>
     </head>
     <body>
-    
+    <center>
     <p>well yes</p>
      <h4>bunny</h4>
     <img src="https://i.pinimg.com/originals/c0/6b/11/c06b11e172008b493c741a2736c5f748.gif">
@@ -46,5 +46,6 @@
     outside and play yes<br>
     happy puppy 
     </p>
+    </center>
     </body>
 </html>
